Убрал префикс api у эндпоинтов
