# storage/api-docs/api-docs.json
@@ -6,13 +6,13 @@
         "version": "1.0.0"
     },
     "paths": {
-        "/api/tasks": {
+        "/tasks": {
             "get": {
                 "tags": [
                     "Tasks"
                 ],
                 "summary": "Get list of tasks",
-                "operationId": "471d938a3bfaeb6fbd981d7c3e2728b0",
+                "operationId": "6a93d54730cde509d735e538ab6800f6",
                 "parameters": [
                     {
                         "name": "page",
@@ -34,7 +34,7 @@
                     "Tasks"
                 ],
                 "summary": "Create a task",
-                "operationId": "f803ebdb2300acdb7e93bbe8d0b9a2e8",
+                "operationId": "9b481c0ed5fdfa1a592d70ba39a348ee",
                 "requestBody": {
                     "description": "New Task",
                     "required": true,
@@ -63,13 +63,13 @@
                 }
             }
         },
-        "/api/tasks/{id}": {
+        "/tasks/{id}": {
             "get": {
                 "tags": [
                     "Tasks"
                 ],
                 "summary": "Get a task",
-                "operationId": "90b3cd4d2d4b416dc989d2055dbed06c",
+                "operationId": "fd3677b5b24695d7b801715869b1357c",
                 "parameters": [
                     {
                         "name": "id",
@@ -109,7 +109,7 @@
                 ],
                 "summary": "Update a task",
                 "description": "Update the specified resource in storage.",
-                "operationId": "1aaf37e74360ef4c10fadaee02ae77fb",
+                "operationId": "85377ff0e935f093dd75ea6886923dbc",
                 "parameters": [
                     {
                         "name": "id",
@@ -162,7 +162,7 @@
                     "Tasks"
                 ],
                 "summary": "Delete a task",
-                "operationId": "ad582480cd57c2a4e3b6a426943eeca5",
+                "operationId": "5ed5dfd4c645e9398f4282969bfe6478",
                 "parameters": [
                     {
                         "name": "id",
